Fix browser list overflow CSS

--- a/default.css
+++ b/default.css
@@ -18,11 +18,11 @@ section.container {
 }
 
 section.left {
-  flex: 1;
+  width: 30%;
   display: flex;
 }
 section.right {
-  flex: 4;
+  flex: 1;
   display: flex;
   flex-direction: column;
 }
@@ -32,21 +32,20 @@ section.browser {
   display: flex;
   flex-direction: column;
   flex: 1;
+  width: 100%;
 }
 nav.browser-items {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
+  height: 100%;
   overflow: auto;
 }
 .browser-item {
   display: flex;
-  flex: 1;
 }
 .browser-item-name {
   overflow: hidden;
   flex: 1;
   white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .browser-item-add {
 }
